--- a/composer.json
+++ b/composer.json
@@ -23,14 +23,14 @@
     "php": ">=7.0.0",
     "composer/installers": "~1.0",
     "nwidart/laravel-modules": "~2.0",
-    "laravelcollective/html": "~5.5.0",
+    "spatie/laravel-html": "^3.0",
     "laracasts/presenter": "~0.2",
     "dimsav/laravel-translatable": "~8.0",
     "mcamara/laravel-localization": "~1.1",
     "floatingpoint/stylist": "~0.5",
     "maatwebsite/laravel-sidebar": "~2.1",
     "yajra/laravel-datatables-oracle": "~8.0",
-    "tightenco/ziggy": "~0.4"
+    "tightenco/ziggy": "^2.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~6.0",
