--- a/composer.json
+++ b/composer.json
@@ -28,13 +28,13 @@
     "dimsav/laravel-translatable": "~8.0",
     "mcamara/laravel-localization": "~1.1",
     "floatingpoint/stylist": "~0.5",
-    "maatwebsite/laravel-sidebar": "~2.1",
-    "yajra/laravel-datatables-oracle": "~8.0",
+    "maatwebsite/laravel-sidebar": "^3.1",
+    "yajra/laravel-datatables-oracle": "~10.0",
     "tightenco/ziggy": "^2.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "~6.0",
-    "orchestra/testbench": "3.5.*",
+    "phpunit/phpunit": "^9.0",
+    "orchestra/testbench": "^8.27",
     "mockery/mockery": "^0.9.4",
     "friendsofphp/php-cs-fixer": "^2.6"
   },
