--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
   "require": {
     "php": ">=8.0.0",
     "composer/installers": "~1.0",
-    "nwidart/laravel-modules": "~2.0",
+    "nwidart/laravel-modules": "^11.0",
     "spatie/laravel-html": "^3.0",
     "laracasts/presenter": "~0.2",
     "astrotomic/laravel-translatable": "^11.0",
